--- a/project-finance.css
+++ b/project-finance.css
@@ -1,42 +1,36 @@
-.heading
-{
-    background:#f4511e;
-    height: 8vh;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-   
-
+.heading {
+  background: #f4511e;
+  height: 8vh;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
 }
-body{
-    margin-bottom: 100px;
+body {
+  margin-bottom: 100px;
 }
- .title
-{
-    padding-left: 2vw;
-    font-size: 6vh;
-    font-family: 'Times New Roman', Times, serif;
-    font-weight: bolder;
-    width: fit-content;
-    box-sizing: border-box;
+.title {
+  padding-left: 2vw;
+  font-size: 6vh;
+  font-family: "Times New Roman", Times, serif;
+  font-weight: bolder;
+  width: fit-content;
+  box-sizing: border-box;
 }
 
-.options
-{
-   width: 65vw;
-   display: flex;
-   justify-content: space-evenly;
+.options {
+  width: 65vw;
+  display: flex;
+  justify-content: space-evenly;
 }
-.options a{
+.options a {
   text-decoration: none;
   color: black;
 }
-.loginForm
-{
-    height: 80vh;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   
+
+.loginForm {
+  height: 80vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
