--- a/project-finance.css
+++ b/project-finance.css
@@ -22,6 +22,7 @@ body {
   width: 65vw;
   display: flex;
   justify-content: space-evenly;
+  align-items: center;
 }
 .options a {
   text-decoration: none;
@@ -33,4 +34,12 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+.logoutbtn
+{
+    color:white; 
+    background-color: black;
+}
+.logoutbtn:hover{
+    color: orange;
 }
