Completed redirecting part in manager and clerk and validated the login page

--- a/project-finance.css
+++ b/project-finance.css
@@ -5,6 +5,7 @@
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
+  margin-bottom: 5px;
 }
 body {
   margin-bottom: 100px;
