IMPLEMENTED LOAN ACCOUNT PART

--- a/project-finance.css
+++ b/project-finance.css
@@ -1,5 +1,5 @@
 .heading {
-  background: #f4511e;
+  background: orange;
   height: fit-content;
   display: flex;
   justify-content: space-between;
