--- a/project-finance.css
+++ b/project-finance.css
@@ -6,6 +6,8 @@
   align-items: center;
   flex-wrap: wrap;
   margin-bottom: 5px;
+  position: sticky;
+  top: 0px;
 }
 body {
   margin-bottom: 100px;
